<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/app_bar_home"
        tools:context=".ui.activity.HomeActivity">

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/nestedScrollView">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/lyLogin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="32dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent">

            <TextView
                    android:text="@string/add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtAdd"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:fontFamily="monospace" android:typeface="monospace"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                    app:met_textColorHint="@color/colorGreyLight"
                    app:met_floatingLabel="highlight"
                    android:id="@+id/txtAddName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="32dp"
                    android:hint="@string/name"
                    android:layout_marginTop="@dimen/_8sdp"
                    app:layout_constraintTop_toBottomOf="@+id/txtAdd"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                    app:met_textColorHint="@color/colorGreyLight"
                    app:met_floatingLabel="highlight"
                    android:id="@+id/txtAddLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="32dp"
                    android:hint="@string/location"
                    android:layout_marginTop="@dimen/_8sdp"
                    app:layout_constraintTop_toBottomOf="@+id/txtAddName"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                    app:met_textColorHint="@color/colorGreyLight"
                    app:met_floatingLabel="highlight"
                    android:id="@+id/txtAddAge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="32dp"
                    android:hint="@string/age"
                    android:layout_marginTop="@dimen/_8sdp"
                    app:layout_constraintTop_toBottomOf="@+id/txtAddLocation"/>

            <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                    android:id="@+id/btnSaveUser"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@drawable/rounded_corner_button_bg"
                    android:text="@string/action_save_users"
                    android:textColor="@android:color/white"
                    app:finalCornerAngle="50dp"
                    app:initialCornerAngle="0dp"
                    app:spinning_bar_color="#FFFFFFFF"
                    app:spinning_bar_padding="7dp"
                    app:spinning_bar_width="3dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/txtAddAge" android:layout_marginTop="32dp"/>


            <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/txtUsersField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/key"
                    app:met_floatingLabelAnimating="true"
                    app:met_floatingLabelTextColor="@color/colorBlackLight"
                    app:met_textColorHint="@color/colorGreyLight"
                    android:textColorHighlight="@color/colorBlack"
                    app:met_floatingLabel="highlight"
                    android:inputType="textEmailAddress"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="32dp" android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                    app:met_textColorHint="@color/colorGreyLight"
                    app:met_floatingLabel="highlight"
                    android:id="@+id/txtUsersFieldValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="32dp"
                    android:hint="@string/value"
                    android:layout_marginTop="@dimen/_8sdp"
                    app:layout_constraintTop_toBottomOf="@+id/txtUsersField"/>


            <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                    android:id="@+id/btnShowUsers"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@drawable/rounded_corner_button_bg"
                    android:text="@string/action_show_users"
                    android:textColor="@android:color/white"
                    app:finalCornerAngle="50dp"
                    app:initialCornerAngle="0dp"
                    app:spinning_bar_color="#FFFFFFFF"
                    app:spinning_bar_padding="7dp"
                    app:spinning_bar_width="3dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/txtUsersFieldValue" android:layout_marginTop="32dp"/>

            <TextView
                    app:layout_constraintTop_toBottomOf="@+id/txtAddAge"
                    android:text="@string/search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView"
                    android:layout_marginTop="32dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:fontFamily="monospace" android:typeface="monospace" android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>