<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

    <include layout="@layout/app_bar"/>

    <include layout="@layout/container_ly"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto"
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="32dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent">


            <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/txtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_password"
                    app:met_iconLeft="@drawable/baseline_https_black_48"
                    app:met_floatingLabelAnimating="true"
                    app:met_floatingLabelTextColor="@color/colorBlackLight"
                    app:met_textColorHint="@color/colorGreyLight"
                    android:textColorHighlight="@color/colorBlack"
                    app:met_baseColor="@color/black"
                    app:met_floatingLabel="highlight"
                    android:inputType="textPassword"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="32dp" android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/txtForgotPasswordHint"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/txtConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    app:met_iconLeft="@drawable/baseline_https_black_48"
                    app:met_floatingLabelAnimating="true"
                    app:met_floatingLabelTextColor="@color/colorBlackLight"
                    app:met_textColorHint="@color/colorGreyLight"
                    android:textColorHighlight="@color/colorBlack"
                    app:met_baseColor="@color/black"
                    app:met_floatingLabel="highlight"
                    android:inputType="textPassword"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="32dp" android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/txtPassword"/>


            <androidx.appcompat.widget.AppCompatButton
                    android:text="@string/action_submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Base.Widget.AppCompat.Button.Colored"
                    android:id="@+id/btnResetPassword"
                    android:background="@drawable/rounded_corner_button_bg"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/txtConfirmPassword"/>

            <TextView
                    android:visibility="gone"
                    android:text="@string/action_reset_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="32dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:fontFamily="monospace" android:typeface="monospace" android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                    android:gravity="center_horizontal"
                    android:text="@string/resetpassword_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtForgotPasswordHint"
                    android:fontFamily="monospace"
                    android:typeface="monospace"
                    android:textSize="@dimen/_12sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView"
                    android:layout_marginStart="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="32dp" app:layout_constraintHorizontal_bias="0.0"/>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

</LinearLayout>
