<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent" android:id="@+id/nestedScrollView">

    <androidx.constraintlayout.widget.ConstraintLayout
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/lyLogin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="32dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent">


            <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/txtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_or_mobile"
                    app:met_iconLeft="@drawable/baseline_email_black_48"
                    app:met_floatingLabelAnimating="true"
                    app:met_floatingLabelTextColor="@color/colorBlackLight"
                    app:met_textColorHint="@color/colorGreyLight"
                    android:textColorHighlight="@color/colorBlack"
                    app:met_baseColor="@color/black"
                    app:met_floatingLabel="highlight"
                    android:inputType="textEmailAddress"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="32dp" android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/txtForgotPasswordHint"/>


            <androidx.appcompat.widget.AppCompatButton
                    android:text="@string/action_next"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Base.Widget.AppCompat.Button.Colored"
                    android:id="@+id/btnNext"
                    android:background="@drawable/rounded_corner_button_bg"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/txtEmail"/>

            <TextView
                    android:text="@string/action_forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="32dp" android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:fontFamily="monospace" android:typeface="monospace" android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                    android:gravity="center_horizontal"
                    android:text="@string/forgotpassword_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtForgotPasswordHint"
                    android:fontFamily="monospace"
                    android:typeface="monospace"
                    android:textSize="@dimen/_12sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView"
                    android:layout_marginStart="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="32dp" app:layout_constraintHorizontal_bias="0.0"/>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>
